# TechEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
TechEngineAPI/: CMakeLists.txt
TechEngineAPI/src/scene/: SceneManagerAPI.cpp
TechEngineClient/: CMakeLists.txt
TechEngineClient/res/shaders/: geometryVertex.glsl  lineFragment.shader  lineVertex.glsl  lineVertex.shader
TechEngineClient/src/ScriptingAPI/: TechEngineAPI.cpp
TechEngineClient/src/components/: CameraComponent.cpp  CameraComponent.hpp  MeshRendererComponent.cpp  MeshRendererComponent.hpp
TechEngineClient/src/core/: App.cpp  App.hpp  Client.cpp  Client.hpp  ConstantPaths.hpp  FileSystem.hpp  Key.cpp  Key.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp
TechEngineClient/src/defaultGameObject/: Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  MainCamera.cpp  MainCamera.hpp  Sphere.cpp  Sphere.hpp
TechEngineClient/src/material/: Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp
TechEngineClient/src/mesh/: CapsuleMesh.hpp  CubeMesh.cpp  CubeMesh.hpp  CylinderMesh.cpp  CylinderMesh.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  SphereMesh.cpp  SphereMesh.hpp
TechEngineClient/src/network/: CConnectionHandler.cpp  CConnectionHandler.hpp  CNetworkHandler.cpp  CNetworkHandler.hpp  CPacketHandler.cpp  CPacketHandler.hpp  CSocketHandler.hpp  NetworkEngine.cpp  NetworkEngine.hpp
TechEngineClient/src/project/: ProjectManager.cpp  ProjectManager.hpp
TechEngineClient/src/renderer/: ErrorCatcher.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Line.hpp  Renderer.cpp  Renderer.hpp  RendererSettings.hpp  Shader.cpp  Shader.hpp  ShadersManager.cpp  ShadersManager.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.hpp
TechEngineClient/src/scene/: SceneHelper.cpp  SceneHelper.hpp  SceneManager.cpp  SceneManager.hpp  SceneSerializer.cpp  SceneSerializer.hpp
TechEngineClient/src/script/: Script.cpp  Script.hpp  ScriptEngine.cpp  ScriptEngine.hpp
TechEngineClient/src/scriptingAPI/: TechEngineAPI.cpp  TechEngineAPI.hpp  TechEngineAPIClient.cpp  TechEngineAPIClient.hpp
TechEngineClient/src/testGameObject/: MainCamera.cpp  QuadMeshTest.cpp  QuadMeshTest.hpp
TechEngineClient/src/texture/: Texture.cpp  TextureManager.cpp
TechEngineClient/src/utils/: YAMLUtils.hpp
TechEngineCore/: CMakeLists.txt
TechEngineCore/src/components/: BoxColliderComponent.cpp  BoxColliderComponent.hpp  Component.cpp  Component.hpp  ComponentFactory.cpp  DirectionalLightComponent.cpp  Transform.cpp  Transform.hpp  TransformComponent.cpp  TransformComponent.hpp
TechEngineCore/src/core/: App.cpp  App.hpp  AppCore.cpp  AppCore.hpp  CompileProject.hpp  Core.hpp  EngineSettings.hpp  FilePaths.hpp  FileSystem.hpp  Logger.cpp  Logger.hpp  Singleton.hpp  Timer.cpp  Timer.hpp  UUID.cpp  UUID.hpp
TechEngineCore/src/dataStructure/: Queue.cpp  Queue.hpp
TechEngineCore/src/event/: EventDispatcher.cpp  EventDispatcher.hpp
TechEngineCore/src/eventSystem/: EventDispatcher.cpp  EventDispatcher.hpp
TechEngineCore/src/events/: Event.hpp
TechEngineCore/src/material/: Material.cpp  MaterialManager.cpp  MaterialManager.hpp
TechEngineCore/src/mesh/: CubeMesh.cpp  CylinderMesh.cpp  CylinderMesh.hpp  ImportedMesh.cpp  ImportedMesh.hpp  Material.cpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  SphereMesh.cpp  SphereMesh.hpp  Vertex.hpp
TechEngineCore/src/network/: NetworkObjectsManager.cpp  NetworkObjectsManager.hpp  NetworkObjectsRegistry.cpp  Packet.cpp  Packet.hpp  PacketType.cpp  PacketType.hpp  SceneSynchronizer.hpp
TechEngineCore/src/physics/: BPLayerInterfaceImpl.cpp  MyBodyActivationListener.cpp  MyBodyActivationListener.hpp  MyContactListener.cpp  ObjectLayerPairFilterImpl.cpp  ObjectVsBroadPhaseLayerFilterImpl.cpp  ObjectVsBroadPhaseLayerFilterImpl.hpp  PhysicsCallback.cpp  PhysicsEngine.cpp  PhysicsEngine.hpp
TechEngineCore/src/project/: Project.cpp  Project.hpp  ProjectManager.cpp  ProjectManager.hpp
TechEngineCore/src/scene/: CoreScene.cpp  CoreScene.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
TechEngineCore/src/script/: Script.cpp  Script.hpp  ScriptEngine.cpp  ScriptEngine.hpp  ScriptRegister.cpp  ScriptRegister.hpp
TechEngineCore/src/scriptingAPI/: TechEngineAPI.cpp  TechEngineAPI.hpp
TechEngineCore/src/serialization/: Buffer.hpp  BufferStream.cpp  BufferStream.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp
TechEngineEditor/: CMakeLists.txt
TechEngineGame/: CMakeLists.txt
TechEngineGame/src/: tegpph.hpp
TechEngineRuntime/: CMakeLists.txt
TechEngineRuntime/ClientRuntime/: CMakeLists.txt
TechEngineRuntime/ServerRuntime/: CMakeLists.txt
TechEngineRuntime/src/: Camera.hpp  NetworkHandler.cpp  NetworkHandler.hpp  QuadMeshTest.cpp  TechEngineRuntime.cpp  TechEngineRuntime.hpp
TechEngineScript/: CMakeLists.txt
TechEngineServer/: CMakeLists.txt
TechEngineServer/src/: tespph.hpp
apps/editor/: CMakeLists.txt
apps/editor/src/: main.cpp
apps/runtime/: CMakeLists.txt
common/: CMakeLists.txt
common/src/: PlayerSelectorEvent.hpp  PlayerSelectorPacket.cpp  PlayerSelectorPacket.hpp  PlayerSyncEvent.hpp  PlayerSyncPacket.cpp  PlayerSyncPacket.hpp  TestPacket.cpp  TestPacket.hpp  TestPacketEvent.hpp
engine/: CMakeLists.txt
engine/API/: CMakeLists.txt
engine/app/: CMakeLists.txt
engine/base/: CMakeLists.txt
engine/client/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/platform/: CMakeLists.txt
engine/server/: CMakeLists.txt
engine/src/: Engine.hpp
game/: CMakeLists.txt
game/src/: Camera.cpp  Camera.hpp  GameObjectTest.cpp  GameObjectTest.hpp  Light.cpp  Light.hpp  NetworkHandler.cpp  NetworkHandler.hpp  NewObjectPanel.cpp  NewObjectPanel.hpp  QuadMeshTest.cpp  QuadMeshTest.hpp  TechAttack.cpp  TechAttack.hpp
runtime/editor/: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/smoke/: smoke.cpp
server/: CMakeLists.txt
server/src/: Server.cpp  Server.hpp
(+1394 files in other folders)
